# clarity

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  vite.config.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  BLOG_POST.md  DEMO_VIDEO.md  ICON_TROUBLESHOOTING.md  OPEN_SOURCE_CHECKLIST.md  PRIVACY.md  PRODUCT_HUNT.md  SCREENSHOTS.md  SOCIAL_MEDIA.md
src/: App.css  App.jsx  Layout.jsx  ScreenshotController.jsx  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  screenshot.rs  settings.rs  state.rs  video_summary.rs
src-tauri/src/commands/: data.rs  mod.rs  recording.rs  settings.rs  summary.rs
src/components/: MainLayout.jsx  RecordButton.jsx  Sidebar.jsx  TitleBar.jsx
src/i18n/: index.js  locales.js
src/pages/: Settings.jsx  Statistics.jsx  Summary.jsx  Trace.jsx
