[package]
name = "clarity"
version = "0.1.0"
description = "AI-powered productivity tracker that automatically captures your screen activity and provides intelligent insights. All data stays local for maximum privacy."
authors = ["crapthings"]
edition = "2021"
license = "MIT"
repository = "https://github.com/crapthings/clarity"
homepage = "https://github.com/crapthings/clarity#readme"
keywords = ["productivity", "time-tracking", "ai", "screen-recording", "privacy", "desktop-app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clarity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.8"
image = "0.25"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"

